chore: add ruff to dev dependencies
- Add ruff as a development dependency in `pyproject.toml`.
- Remove unused imports (`Dict`, `Optional`) from `metrics.py` and `config.py`.
- Apply minor style fix to `click.echo` in `__main__.py`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,8 @@ include = ["llm_observability*"]
 
 [tool.setuptools.package-data]
 llm_observability = ["templates/**/*", "static/**/*"]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.10",
+]
